Half-fix FindPage.tsx topPanel button alignment
For some reason the CSV button is still reduced in height but at least they all stay inside the parent now

--- a/src/pages/styles/find.scss
+++ b/src/pages/styles/find.scss
@@ -59,13 +59,18 @@
 
     #sentenceR {
       margin: 0 10px 0 30px;
+      flex-shrink: 0;
+      height: 100%;
 
       button {
         margin: 0;
         border-radius: 0;
         height: 100%;
-        width: 120px;
         font-size: 24px;
+
+        &:not(:last-child) {
+          margin-right: 10px;
+        }
       }
     }
   }
